# GameOver.gd - –≠–∫—Ä–∞–Ω –æ–∫–æ–Ω—á–∞–Ω–∏—è –∏–≥—Ä—ã
# –ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç —Ä–µ–∑—É–ª—å—Ç–∞—Ç –±–∏—Ç–≤—ã, —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –∏ –∫–Ω–æ–ø–∫–∏ –¥–ª—è –ø—Ä–æ–¥–æ–ª–∂–µ–Ω–∏—è

extends Control

signal restart_game
signal exit_game

var winner: String = ""
var battle_stats: Dictionary = {}
var balance_report: Dictionary = {}

@onready var result_label: Label = $VBoxContainer/ResultLabel
@onready var battle_duration_label: Label = $VBoxContainer/StatsContainer/BattleDuration
@onready var units_spawned_label: Label = $VBoxContainer/StatsContainer/UnitsSpawned
@onready var units_killed_label: Label = $VBoxContainer/StatsContainer/UnitsKilled
@onready var buildings_built_label: Label = $VBoxContainer/StatsContainer/BuildingsBuilt
@onready var restart_button: Button = $VBoxContainer/ButtonsContainer/RestartButton
@onready var exit_button: Button = $VBoxContainer/ButtonsContainer/ExitButton

func _ready():
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã –∫–Ω–æ–ø–æ–∫
	restart_button.pressed.connect(_on_restart_pressed)
	exit_button.pressed.connect(_on_exit_pressed)
	
	# –°–∫—Ä—ã–≤–∞–µ–º —ç–∫—Ä–∞–Ω –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
	visible = false

# –£—Å—Ç–∞–Ω–æ–≤–∫–∞ –ø–æ–±–µ–¥–∏—Ç–µ–ª—è
func set_winner(winner_team: String):
	winner = winner_team
	
	if winner == "player":
		result_label.text = "–ü–û–ë–ï–î–ê!"
		result_label.modulate = Color.GREEN
	else:
		result_label.text = "–ü–û–†–ê–ñ–ï–ù–ò–ï"
		result_label.modulate = Color.RED
	
	print("üéÆ –£—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω –ø–æ–±–µ–¥–∏—Ç–µ–ª—å: ", winner)

# –£—Å—Ç–∞–Ω–æ–≤–∫–∞ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ –±–∏—Ç–≤—ã
func set_battle_stats(stats: Dictionary):
	battle_stats = stats
	
	# –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –¥–ª–∏—Ç–µ–ª—å–Ω–æ—Å—Ç—å –±–∏—Ç–≤—ã
	var duration_seconds = stats.get("battle_duration", 0.0)
	var minutes = int(duration_seconds) / 60
	var seconds = int(duration_seconds) % 60
	battle_duration_label.text = "–î–ª–∏—Ç–µ–ª—å–Ω–æ—Å—Ç—å –±–∏—Ç–≤—ã: %d:%02d" % [minutes, seconds]
	
	# –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ —é–Ω–∏—Ç–æ–≤
	var player_units = stats.get("units_spawned", {}).get("player", 0)
	var enemy_units = stats.get("units_spawned", {}).get("enemy", 0)
	units_spawned_label.text = "–°–æ–∑–¥–∞–Ω–æ —é–Ω–∏—Ç–æ–≤: %d (–∏–≥—Ä–æ–∫) / %d (–≤—Ä–∞–≥)" % [player_units, enemy_units]
	
	# –£–Ω–∏—á—Ç–æ–∂–µ–Ω–Ω—ã–µ –≤—Ä–∞–≥–∏
	var player_kills = stats.get("units_killed", {}).get("enemy", 0)
	units_killed_label.text = "–£–Ω–∏—á—Ç–æ–∂–µ–Ω–æ –≤—Ä–∞–≥–æ–≤: %d" % player_kills
	
	# –ü–æ—Å—Ç—Ä–æ–µ–Ω–Ω—ã–µ –∑–¥–∞–Ω–∏—è
	var player_buildings = stats.get("buildings_built", {}).get("player", 0)
	var enemy_buildings = stats.get("buildings_built", {}).get("enemy", 0)
	buildings_built_label.text = "–ü–æ—Å—Ç—Ä–æ–µ–Ω–æ –∑–¥–∞–Ω–∏–π: %d (–∏–≥—Ä–æ–∫) / %d (–≤—Ä–∞–≥)" % [player_buildings, enemy_buildings]
	
	print("üìä –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ –±–∏—Ç–≤—ã —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∞")

# –£—Å—Ç–∞–Ω–æ–≤–∫–∞ –æ—Ç—á—ë—Ç–∞ –ø–æ –±–∞–ª–∞–Ω—Å—É
func set_balance_report(report: Dictionary):
	balance_report = report
	print("üìà –û—Ç—á—ë—Ç –ø–æ –±–∞–ª–∞–Ω—Å—É —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")

# –ü–æ–∫–∞–∑ —ç–∫—Ä–∞–Ω–∞
func show_screen():
	visible = true
	print("üéÆ –≠–∫—Ä–∞–Ω –æ–∫–æ–Ω—á–∞–Ω–∏—è –∏–≥—Ä—ã –ø–æ–∫–∞–∑–∞–Ω")

# –°–∫—Ä—ã—Ç–∏–µ —ç–∫—Ä–∞–Ω–∞
func hide_screen():
	visible = false
	print("üéÆ –≠–∫—Ä–∞–Ω –æ–∫–æ–Ω—á–∞–Ω–∏—è –∏–≥—Ä—ã —Å–∫—Ä—ã—Ç")

# –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏ "–ù–∞—á–∞—Ç—å –∑–∞–Ω–æ–≤–æ"
func _on_restart_pressed():
	print("üîÑ –ü–µ—Ä–µ–∑–∞–ø—É—Å–∫ –∏–≥—Ä—ã...")
	restart_game.emit()

# –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏ "–í—ã—Ö–æ–¥"
func _on_exit_pressed():
	print("üö™ –í—ã—Ö–æ–¥ –∏–∑ –∏–≥—Ä—ã...")
	exit_game.emit() 